# pdns

./: .travis.yml  CMakeLists.txt  config-cmake.h.in  configure.ac
.circleci/: config.yml
.github/workflows/: builder.yml
build-scripts/: build-auth-rpm  build-dnsdist-debian  changelog-from-pr-backports.py  cherry-pick-pr.py  test-auth  travis.sh
build-scripts/debian-authoritative/: control.in
build-scripts/debian-dnsdist/: rules
builder-support/debian/authoritative/debian-jessie/: control
builder-support/debian/authoritative/debian-stretch/: control
builder-support/debian/authoritative/ubuntu-trusty/: control
builder-support/debian/dnsdist/debian-buster/: rules
builder-support/debian/dnsdist/debian-jessie/: rules
builder-support/debian/dnsdist/debian-stretch/: rules
builder-support/debian/dnsdist/ubuntu-trusty/: rules
builder-support/debian/recursor/debian-jessie/: rules
builder-support/debian/recursor/debian-stretch/: rules
builder-support/dockerfiles/: Dockerfile.target.centos-7-image  Dockerfile.target.test-debian-stretch
builder-support/specs/: dnsdist.spec  pdns.spec
cmake/: FindRagel.cmake
docs/: Makefile.am  conf.py  dnsupdate.rst  requirements.txt  secpoll.zone  settings.rst
docs/backends/: ldap.rst  pipe.rst
docs/changelog/: 4.0.rst
docs/common/api/: zone.rst
docs/dnssec/: migration.rst  operational.rst
docs/http-api/: endpoint-zones.rst  zone.rst
docs/http-api/swagger/: authoritative-api-swagger.yaml
docs/markdown/: changelog.md.raw  changelog.raw.md
docs/markdown/security/: powerdns-advisory-2016-02.md  powerdns-advisory-2016-03.md  powerdns-advisory-2016-04.md  powerdns-advisory-2016-05.md
docs/security-advisories/: powerdns-advisory-2017-04.rst  powerdns-advisory-2017-07.rst
ext/: Makefile.am
ext/luawrapper/include/: LuaContext.hpp
m4/: boost.m4  dnsdist_check_libssl.m4  dnsdist_check_s2n.m4  pdns_enable_ixfrdist.m4
modules/: CMakeLists.txt  Makefile.am
modules/bindbackend/: bindbackend2.cc  bindbackend2.hh
modules/dlsobackend/: dlsobackend.cc
modules/geosqlbackend/: README.md  geosqlbackend.cc  geosqlbackend.hh
modules/gmysqlbackend/: CMakeLists.txt
modules/gpgsqlbackend/: CMakeLists.txt  spgsql.cc
modules/gsqlite3backend/: 4.2.0_to_4.3.0_schema.sqlite3.sql  CMakeLists.txt  gsqlite3backend.cc  gsqlite3backend.hh  gsqlite3backend_autoload.cc  schema.sqlite3.sql
modules/ldapbackend/: ldapauthenticator.cc  ldapbackend.cc  ldapbackend.hh  master.cc  native.cc  powerldap.cc  powerldap.hh
modules/lmdbbackend/: lmdb-safe.cc  lmdb-safe.hh  lmdb-typed.cc  lmdb-typed.hh
modules/luabackend/: dnssec.cc  lua_functions.cc  luabackend.cc  luabackend.hh  minimal.cc  private.cc  reload.cc  slave.cc  supermaster.cc
modules/remotebackend/: Makefile.am
modules/tinydnsbackend/: data  data.cdb
pdns/: CMakeLists.txt  Makefile.am  bindlexer.l  bindparser.yy  common_startup.cc  configparser.cc  configparser.hh  dbdnsseckeeper.cc  dns_random.cc  dnsbackend.hh  dnscrypt.cc  dnscrypt.hh  dnsdist-ecs.cc  dnsdist-lua-actions.cc  dnsdist-lua.cc  dnsdist-lua2.cc  dnsdist-tcp.cc  dnsdist.cc  dnsdist.hh  dnsname-yaml.hh  dnsname.cc  dnsname.hh  dnspacket.cc  dnspacket.hh  dnsparser.cc  dnsparser.hh  dnsrecords.cc  dnsrecords.hh  dnsrulactions.hh  dnssecinfra.cc  dnssecinfra.hh  dnsseckeeper.hh  ednscookies.cc  ednscookies.hh  ednssubnet.cc  filterpo.cc  filterpo.hh  generate-service-file.sh  iputils-yaml.hh  iputils.hh  (+57 more)
pdns/backends/gsql/: gsqlbackend.cc  gsqlbackend.hh
pdns/dnsdistdist/: .gitignore  Makefile.am  configure.ac  dnsdist-actions-factory.cc  dnsdist-configuration-yaml.cc  dnsdist-cookies.cc  dnsdist-cookies.hh  dnsdist-idstate.hh  dnsdist-protobuf.cc  dnsdist-protobuf.hh  dnsdist-tcp.cc  dnsdist.cc  dnsrulactions.cc  incfiles  make-dnsdist-lua-ffi-interface.inc.sh  meson.build  meson_options.txt  siphash.c  tcpiohandler.hh  test-dnsdist-opentelemetry_cc.cc  test-dnsdistcookies_cc.cc
pdns/dnsdistdist/docs/: install.rst  requirements.txt  rules-actions.rst  running.rst
pdns/dnsdistdist/docs/reference/: config.rst  dnscrypt.rst
pdns/dnsdistdist/ext/ipcrypt/: ipcrypt.cc
pdns/recursordist/: Caddyfile  Makefile.am  config-base.hh  configure.ac  example-config.json  meson.build  pdns-recursor.service.in  syncres-authdomain.cc  test-syncres_cc.cc  test-yang-config.cc  yang-config.cc  yang-config.hh
pdns/recursordist/contrib/: syncres.dot
pdns/recursordist/docs/: requirements.txt  settings.rst
pdns/recursordist/docs/manpages/: rec_control.rst
pdns/recursordist/docs/security-advisories/: powerdns-advisory-2017-03.rst  powerdns-advisory-2017-05.rst  powerdns-advisory-2017-06.rst  powerdns-advisory-2017-07.rst
pdns/recursordist/html/: index.html  local.js
pdns/recursordist/m4/: pdns_with_libyang.m4
pdns/recursordist/yang/: pdns-recursor.yang
regression-tests/: cleandig  recursor-test  runtests  start-test-stop
regression-tests.api/: runtests  runtests.py  test_Zones.py
regression-tests.dnsdist/: dnscrypt.py  dnsdisttests.py  requirements.txt  test_DNSCrypt.py  test_OpenTelemetryTracing.py
regression-tests.nobackend/counters/: command  expected_result
regression-tests.nobackend/distributor/: command
regression-tests.nobackend/tinydns-data-check/: expected_result
regression-tests.recursor/: test.vars
regression-tests.recursor-dnssec/: recursortests.py  test_Interop.py  test_Lua.py  test_NoRRSIG.py  test_Sortlist.py
regression-tests/backends/: bind-master  bind-slave  common  geoip-master  gmysql-master  gmysql-slave  goracle-master  goracle-slave  gpgsql-master  gpgsql-slave  gsqlite3-master  gsqlite3-slave  ldap-master  lmdb-master  mydns-master  opendbx-master  oracle-master  oracle-slave  remote-master  tinydns-master
regression-tests/modules/dlso-gsql/: dlsogsql.cc
regression-tests/tests/bind-add-zone/stress/: run.sh
regression-tests/tests/verify-dnssec-zone/: expected_result  expected_result.nsec3-optout
