option('console-encryption', type: 'boolean', value: false, description: 'Enable encryption on the control channel, requires libsodium')
option('dns-over-tls', type: 'boolean', value: false, description: 'Enable DNS-over-TLS support.')
option('dnscrypt', type: 'boolean', value: false, description: 'Enable DNSCrypt, requires libsodium')
option('luajit', type: 'boolean', value: false, description: 'Use LuaJIT instead to plain Lua')
option('protobuf', type: 'boolean', value: false, description: 'Enable ProtoBuf and DNSTap support')
option('openssl', type: 'boolean', value: true, description: 'Use OpenSSL with dns-over-tls')
option('gnutls', type: 'boolean', value: false, description: 'Use gnuTLS with dns-over-tls')
option('dnstap-fstrm', type: 'boolean', value: false, description: 'Enable fstrm support for DNSTap')
option('ebpf', type: 'boolean', value: false, description: 'Enable eBPF support')
option('snmp', type: 'boolean', value: false, description: 'Enable SNMP support')
option('re2', type: 'boolean', value: false, description: 'Enable re2 support')
option('systemd', type: 'boolean', value: false, description: 'Enable systemd notify support and install unit-files')
option('hardening', type: 'boolean', value: true, description: 'Enable hardening options (PIE, RELRO etc.)')
